# conf

./: CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.github/workflows/: docs.yaml
docs/: README.md
docs/reference/: README.md  converters.md  core.md  field-helpers.md
src/liblaf/conf/: __init__.py  __init__.pyi  _config.py  _field.py  _field_specifiers.py  _group.py  _sentinel.py  _types.py  _var.py
src/liblaf/conf/converters/: __init__.py  __init__.pyi  _misc.py  _pydantic.py
tests/: test_config.py  test_config_meta.py  test_field.py  test_group.py  test_var.py
tests/field_specifiers/: test_scalar.py  test_structured.py  test_temporal.py
